fixes multiple icon component issue - logos not working yet

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Hello, Rails!</h1>
-<app></app>
-<svg-icon name="file-pdf" fill="rgb(37, 138, 239)" size="24px" />
+<heading level="h1">The quick brown fox</heading>
+<svg-icon name="pul-icon-dissertation" fill="rgb(37, 138, 239)" width="55px"></svg-icon>
+<svg-icon name="pul-icon-file-pdf" fill="rgb(37, 138, 239)" width="24px"></svg-icon>
