fixes multiple icon issues

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,3 +2,4 @@
 <heading level="h1">The quick brown fox</heading>
 <svg-icon name="pul-icon-dissertation" fill="rgb(37, 138, 239)" width="55px"></svg-icon>
 <svg-icon name="pul-icon-file-pdf" fill="rgb(37, 138, 239)" width="24px"></svg-icon>
+<svg-icon name="university-logo" width="200px"></svg-icon>
